--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dance</title>
+    <title>Welcome to dance!</title>
     <link rel="stylesheet" href="styling.css">
     <style>
     :root {
@@ -24,13 +24,21 @@
     h1 {
         color: var(--col1);
         text-align: center;
-        font: italic bold 300% bold;
+        font: italic bold 100%;
     }
 
    .myInd {
         display : flex;
         justify-content: space-evenly;
         padding : 10px;
+        text-align: center;
+   }
+
+   .myInd p{
+       text-align: center;
+   }
+
+   @media (max-width :700px) {
    }
 
     </style>
@@ -38,13 +46,19 @@
 <body>
     <div class="myHeader">
         <h1>
-            stuffy
+            Dance
         </h1>  
     </div>  
 
-    <div class="myIndex">
-        add some stuff
-    </div>
+    <nav class="myIndex">
+        <p>Classes</p>
+        <p>Dancewear</p>
+        <p>Stretches and exercises</p>
+    </nav>
+    
+    <dive>
+        <!-- ads  -->
+    </dive>
     
     <div id="myBody">
         middle of screen 
