--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
     <nav class="myIndex">
         <p>Classes</p>
         <p>Dancewear</p>
+        <p></p>
         <p>Stretches and exercises</p>
     </nav>
     
-    <dive>
+    <div>
         <!-- ads  -->
-    </dive>
+    </div>
     
     <div id="myBody">
         middle of screen 
