--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to dance!</title>
-    <link rel="stylesheet" href="styling.css">
+    <link rel="myStyle" href="styling.css">
     <style>
     :root {
     --col1: rgba(0, 0, 255, 0.534);
@@ -53,7 +53,7 @@
     <nav class="myIndex">
         <p>Classes</p>
         <p>Dancewear</p>
-        <p></p>
+        <p>History</p>
         <p>Stretches and exercises</p>
     </nav>
     
