--- a/index.html
+++ b/index.html
@@ -6,55 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to dance!</title>
     <link rel="myStyle" href="styling.css">
-    <style>
-    :root {
-    --col1: rgba(0, 0, 255, 0.534);
-    --col2: rgb(189, 91, 0);
-    --col3: #F59776;
-    --col4: #FF875D;
-    --col5:#00DEB2;
-    --col6: #CBF7FF;
-
-    }
-    body {
-        background-color: var(--col6);
-        color: var(--col2);
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    h1 {
-        color: var(--col1);
-        text-align: center;
-        font: italic bold 100%;
-    }
-
-   .myInd {
-        display : flex;
-        justify-content: space-evenly;
-        padding : 10px;
-        text-align: center;
-   }
-
-   .myInd p{
-       text-align: center;
-   }
-
-   @media (max-width :700px) {
-   }
-
-    </style>
+    
 </head>
 <body>
-    <div class="myHeader">
+    <div id="myHeader">
         <h1>
             Dance
         </h1>  
     </div>  
 
-    <nav class="myIndex">
-        <p>Classes</p>
-        <p>Dancewear</p>
+    <nav id="myIndex">
         <p>History</p>
         <p>Stretches and exercises</p>
+        <p>Classes</p>
+        <p>Dancewear</p>
     </nav>
     
     <div>
