--- a/page-2.html
+++ b/page-2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>An Introduction to MBTI/Diplomats</title>
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
@@ -19,8 +19,9 @@
     </div>
     </nav>
 
+    <div id="headDiv"><h1>The Diplomats - xNFs</h1></div>
     <div id= "myBody">
-        <h1>The Diplomats - xNFs</h1>
+        
         <h2>INFJ</h2>
         <h3>Ne > Ti > Fe > Si</h3>
         <p>INFJs are the rarest personality types of all. Still, INFJs leave their mark on the world. They have a deep sense of idealism and integrity, but they aren’t idle dreamers – they take concrete steps to realize their goals and make a lasting impact.INFJs’ unique combination of personality traits makes them complex and quite versatile. For example, INFJs can speak with great passion and conviction, especially when standing up for their ideals. At other times, however, they may choose to be soft-spoken and understated, preferring to keep the peace rather than challenge others.</p>
