--- a/page-1.html
+++ b/page-1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>An Introduction to MBTI/Analysts</title>
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
@@ -19,8 +19,9 @@
     </div>
     </nav>
 
+    <div id="headDiv"><h1>The Analysts - xNTxs</h1></div>
     <div id= myBody>
-    <h1>The Analysts - xNTxs</h1>
+    
     
         <h2>INTJ</h2>
         <h3>Ni > Te > Fi > Se</h3>
