--- a/page-3.html
+++ b/page-3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>An Introduction to MBTI/Sentinels</title>
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
@@ -19,8 +19,9 @@
     </div>
     </nav>
 
+    <div id=headDiv><h1>The Sentinels - xSxJs</h1></div>
     <div id= "myBody">
-        <h1>The Sentinels - xSxJs</h1>
+        
         <h2>ISTJ</h2>
         <h3>Si > Te > Fi > Ne</h3>
         <p>The ISTJ personality type is thought to be the most abundant, making up around 13% of the population. Their defining characteristics of integrity, practical logic and tireless dedication to duty make ISTJs a vital core to many families, as well as organizations that uphold traditions, rules and standards, such as law offices, regulatory bodies and military. People with the ISTJ personality type enjoy taking responsibility for their actions, and take pride in the work they do – when working towards a goal, ISTJs hold back none of their time and energy completing each relevant task with accuracy and patience.</p>
