--- a/page-1.html
+++ b/page-1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="myIndex">
-        <a href="/">Home</a>
+        <a href="/index.html">Home</a>
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
@@ -63,6 +63,10 @@
         <p>This frustrates Debaters, and they find that their quarrelsome fun burns many bridges, oftentimes inadvertently, as they plow through others’ thresholds for having their beliefs questioned and their feelings brushed aside. Treating others as they’d be treated, Debaters have little tolerance for being coddled, and dislike when people beat around the bush, especially when asking a favor. Debater personalities find themselves respected for their vision, confidence, knowledge, and keen sense of humor, but often struggle to utilize these qualities as the basis for deeper friendships and romantic relationships.</p>
         <p>Debaters have a longer road than most in harnessing their natural abilities – their intellectual independence and free-form vision are tremendously valuable when they’re in charge, or at least have the ear of someone who is, but getting there can take a level of follow-through that Debaters struggle with.Once they’ve secured such a position, Debaters need to remember that for their ideas to come to fruition, they will always depend on others to assemble the pieces – if they’ve spent more time “winning” arguments than they have building consensus, many Debaters will find they simply don’t have the support necessary to be successful. Playing devil’s advocate so well, people with this personality type may find that the most complex and rewarding intellectual challenge is to understand a more sentimental perspective, and to argue consideration and compromise alongside logic and progress.</p>
         
+    </div>
+
+    <div id="footer">
+        Natalie Hale 2021 
     </div>
     
 </body>
