--- a/page-2.html
+++ b/page-2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="myIndex">
-        <a href="/">Home</a>
+        <a href="/index.html">Home</a>
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
@@ -55,6 +55,10 @@
         <p>ENFPs are proof that seeking out life’s joys and pleasures isn’t the same as being shallow. Seemingly in the blink of an eye, people with this personality type can transform from impassioned idealists to carefree figures on the dance floor.Even in moments of fun, ENFPs want to connect emotionally with others. Few things matter more to these personality types than having genuine, heartfelt conversations with the people they cherish. ENFPs believe that everyone deserves to express their feelings, and their empathy and warmth create spaces where even the most timid spirits can feel comfortable opening up.</p>
         <p>People with this personality type need to be careful, however. ENFPs’ intuition may lead them to read far too much into other people’s actions and behaviors. Instead of simply asking for an explanation, ENFPs may end up puzzling over someone else’s desires or intentions. This kind of social stress is what keeps harmony-focused ENFPs awake at night.ENFPs will spend a lot of time exploring different relationships, feelings, and ideas before they find a path for their lives that feels right. But when they finally do find their way, their imagination, empathy, and courage can light up not only their own lives but also the world around them.</p>
             
+    </div>
+
+    <div id="footer">
+        Natalie Hale 2021 
     </div>
 </body>
 </html>
