--- a/page-3.html
+++ b/page-3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="myIndex">
-        <a href="/">Home</a>
+        <a href="/index.html">Home</a>
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
@@ -54,6 +54,10 @@
         <p>Being pretty conflict-averse, ESFJs spend a lot of their energy establishing social order, and prefer plans and organized events to open-ended activities or spontaneous get-togethers. People with this personality type put a lot of effort into the activities they’ve arranged, and it’s easy for ESFJs’ feelings to be hurt if their ideas are rejected, or if people just aren’t interested. Again, it’s important for ESFJs to remember that everyone is coming from a different place, and that disinterest isn’t a comment about them or the activity they’ve organized – it’s just not their thing.</p>
         <p>Coming to terms with their sensitivity is ESFJs’ biggest challenge – people are going to disagree and they’re going to criticize, and while it hurts, it’s just a part of life. The best thing for ESFJs to do is to do what they do best: be a role model, take care of what they have the power to take care of, and enjoy that so many people do appreciate the efforts they make.</p>
         
+    </div>
+
+    <div id="footer">
+        Natalie Hale 2021 
     </div>
 </body>
 </html>
