--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class= "gridwrap">
     
         <nav id="myIndex">
-            <a href="/">Home</a>
+            <a href="/index.html">Home</a>
         <div id="myInd">
                 The types
                 <a href="page-1.html">Analysts</a>
