--- a/page-4.html
+++ b/page-4.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <nav id="myIndex">
-            <a href="/">Home</a>
+            <a href="/index.html">Home</a>
         <div id="myInd">
                 The types
                 <a href="page-1.html">Analysts</a>
@@ -58,8 +58,14 @@
             <p>The biggest challenge ESFPs face is that they are often so focused on immediate pleasures that they neglect the duties and responsibilities that make those luxuries possible. Complex analysis, repetitive tasks, and matching statistics to real consequences are not easy activities for ESFPs. They’d rather rely on luck or opportunity, or simply ask for help from their extensive circle of friends. It is important for ESFPs to challenge themselves to keep track of long-term things like their retirement plans or sugar intake – there won’t always be someone else around who can help to keep an eye on these things.</p>
             <p>ESFPs recognize value and quality, which on its own is a fine trait. In combination with their tendency to be poor planners though, this can cause them to live beyond their means, and credit cards are especially dangerous. More focused on leaping at opportunities than in planning out long-term goals, ESFPs may find that their inattentiveness has made some activities unaffordable.ESFPs are welcome wherever there’s a need for laughter, playfulness, and a volunteer to try something new and fun – and there’s no greater joy for ESFP personalities than to bring everyone else along for the ride. ESFPs can chat for hours, sometimes about anything but the topic they meant to talk about, and share their loved ones’ emotions through good times and bad. If they can just remember to keep their ducks in a row, they’ll always be ready to dive into all the new and exciting things the world has to offer, friends in tow.</p>
 
-        </p>   
+        </p>  
+         
 
     </div>
+
+    <div id="footer">
+        Natalie Hale 2021 
+    </div>
+
 </body>
 </html>
