--- a/page-4.html
+++ b/page-4.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <nav id="myIndex">
-            <a href="/index.html">Home</a>
+            <a href="index.html">Home</a>
         <div id="myInd">
                 The types
                 <a href="page-1.html">Analysts</a>
