--- a/page-1.html
+++ b/page-1.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="myIndex">
-        <a href="link.html">Home</a>
+        <a href="index.html">Home</a>
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
