--- a/page-4.html
+++ b/page-4.html
@@ -14,14 +14,14 @@
         <div id="myInd">
                 The types
                 <a href="page-1.html">Analysts</a>
-                <a href="page-2.html">Diplomats</a>
-                <a href="page-3.html">Sentinels</a>
+                <a href="page-2.html">Idealists</a>
+                <a href="page-3.html">Guargians</a>
                 <a href="page-4.html">Explorers</a>
         </div>
         </nav>
     </div>
     <div>
-        <div id="headDiv"><h1>The Explorers - xSxPs</h1></div>
+        <div id="headDiv" style="background-image: url('/images/explorer2.png');"><h1>The Explorers - xSxPs</h1></div>
         <div id="myBody">
             
             <h2>ISTP</h2>
