--- a/page-2.html
+++ b/page-2.html
@@ -13,13 +13,13 @@
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
-            <a href="page-2.html">Diplomats</a>
-            <a href="page-3.html">Sentinels</a>
+            <a href="page-2.html">Idealists</a>
+            <a href="page-3.html">Guardians</a>
             <a href="page-4.html">Explorers</a>
     </div>
     </nav>
 
-    <div id="headDiv"><h1>The Diplomats - xNFs</h1></div>
+    <div id="headDiv" style="background-image: url('/images/diplomats.jpg');"><h1>The Idealists - xNFs</h1></div>
     <div id= "myBody">
         
         <h2>INFJ</h2>
