--- a/page-3.html
+++ b/page-3.html
@@ -13,13 +13,13 @@
     <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
-            <a href="page-2.html">Diplomats</a>
-            <a href="page-3.html">Sentinels</a>
+            <a href="page-2.html">Idealists</a>
+            <a href="page-3.html">Guardians</a>
             <a href="page-4.html">Explorers</a>
     </div>
     </nav>
 
-    <div id=headDiv><h1>The Sentinels - xSxJs</h1></div>
+    <div id=headDiv style="background-image: url('/images/denfenders.png');"><h1>The Guardians - xSxJs</h1></div>
     <div id= "myBody">
         
         <h2>ISTJ</h2>
