--- a/page-2.html
+++ b/page-2.html
@@ -9,14 +9,18 @@
 </head>
 <body>
     <nav id="myIndex">
-        <a href="index.html">Home</a>
-    <div id="myInd">
+        <div id ="myIn">
+            <a href="index.html">Home</a>
+            <span>|</span>
+            <a href="page-5.html">Storyboard</a>
+        </div>
+        <div id="myInd">
             The types
             <a href="page-1.html">Analysts</a>
             <a href="page-2.html">Idealists</a>
             <a href="page-3.html">Guardians</a>
             <a href="page-4.html">Explorers</a>
-    </div>
+        </div>
     </nav>
 
     <div id="headDiv" style="background-image: url('/images/diplomats.jpg');"><h1>The Idealists - xNFs</h1></div>
