--- a/page-4.html
+++ b/page-4.html
@@ -8,20 +8,22 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 <body>
-    <div>
-        <nav id="myIndex">
+    <nav id="myIndex">
+        <div id ="myIn">
             <a href="index.html">Home</a>
-        <div id="myInd">
-                The types
-                <a href="page-1.html">Analysts</a>
-                <a href="page-2.html">Idealists</a>
-                <a href="page-3.html">Guargians</a>
-                <a href="page-4.html">Explorers</a>
+            <span>|</span>
+            <a href="page-5.html">Storyboard</a>
         </div>
-        </nav>
-    </div>
+        <div id="myInd">
+            The types
+            <a href="page-1.html">Analysts</a>
+            <a href="page-2.html">Idealists</a>
+            <a href="page-3.html">Guardians</a>
+            <a href="page-4.html">Explorers</a>
+        </div>
+    </nav>
     <div>
-        <div id="headDiv" style="background-image: url('/images/explorer2.png');"><h1>The Explorers - xSxPs</h1></div>
+        <div id="headDiv" style="background-image: url('/images/isfpheader.png');"><h1>The Explorers - xSxPs</h1></div>
         <div id="myBody">
             
             <h2>ISTP</h2>
