--- a/page-1.html
+++ b/page-1.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div id="headDiv" style="background-image: url('/images/entpheader.png');"><h1>The Analysts - xNTxs</h1></div>
+    <div id="headDiv" class="oneHead"><h1>The Analysts - xNTxs</h1></div>
     <div id= myBody>
     
     
