--- a/page-3.html
+++ b/page-3.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div id=headDiv style="background-image: url('/images/denfenders.png');"><h1>The Guardians - xSxJs</h1></div>
+    <div id=headDiv class="threeHead"><h1>The Guardians - xSxJs</h1></div>
     <div id= "myBody">
         
         <h2>ISTJ</h2>
