--- a/page-4.html
+++ b/page-4.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
     <div>
-        <div id="headDiv" style="background-image: url('/images/isfpheader.png');"><h1>The Explorers - xSxPs</h1></div>
+        <div id="headDiv" class="fourHead"><h1>The Explorers - xSxPs</h1></div>
         <div id="myBody">
             
             <h2>ISTP</h2>
