--- a/page-2.html
+++ b/page-2.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div id="headDiv" style="background-image: url('/images/diplomats.jpg');"><h1>The Idealists - xNFs</h1></div>
+    <div id="headDiv" class="twoHead"><h1>The Idealists - xNFs</h1></div>
     <div id= "myBody">
         
         <h2>INFJ</h2>
