--- a/page-5.html
+++ b/page-5.html
@@ -23,7 +23,7 @@
         </div>
     </nav>
 
-    <div id="headDiv" style="background-image: url('/images/16\ avatars.jpg');"><h1></h1><h1>Storyboard</h1></div>
+    <div id="headDiv" class="introHead"><h1></h1><h1>Storyboard</h1></div>
     <h2 id="storyboardHead">How to navigate the website</h2>
 </body>
 </html>
