--- a/page-5.html
+++ b/page-5.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>An Introduction to MBTI/storyboard</title>
     <link rel="stylesheet" href="styling.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <nav id="myIndex">
