--- a/page-1.html
+++ b/page-1.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+
+    <!-- nav bar code -->
     <nav id="myIndex">
         <div id ="myIn">
             <a href="index.html">Home</a>
@@ -24,6 +26,8 @@
         </div>
     </nav>
 
+
+    <!-- header  -->
     <div id="headDiv" class="oneHead"><h1>The Analysts - xNTxs</h1></div>
     <div id= myBody>
     
@@ -78,6 +82,8 @@
         
     </div>
 
+
+    <!-- footer -->
     <div id="footer">
         Natalie Hale 2021 
     </div>
