--- a/page-4.html
+++ b/page-4.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+
+    <!-- nav bar code -->
     <nav id="myIndex">
         <div id ="myIn">
             <a href="index.html">Home</a>
@@ -23,8 +25,12 @@
             <a href="page-4.html">Explorers</a>
         </div>
     </nav>
-    <div>
+    
+
+        <!-- header  -->
         <div id="headDiv" class="fourHead"><h1>The Explorers - xSxPs</h1></div>
+
+
         <div id="myBody">
             
             <h2>ISTP</h2>
@@ -66,6 +72,8 @@
 
     </div>
 
+
+    <!-- footer -->
     <div id="footer">
         Natalie Hale 2021 
     </div>
