--- a/page-5.html
+++ b/page-5.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="favicon.ico">
 </head>
 <body>
+
+    <!-- nav bar code -->
     <nav id="myIndex">
         <div id ="myIn">
             <a href="index.html">Home</a>
@@ -24,7 +26,13 @@
         </div>
     </nav>
 
+    <!-- header  -->
     <div id="headDiv" class="introHead"><h1></h1><h1>Storyboard</h1></div>
     <h2 id="storyboardHead">How to navigate the website</h2>
+
+        <!-- footer -->
+        <div id="footer">
+            Natalie Hale 2021 
+        </div>
 </body>
 </html>
