--- a/page-5.html
+++ b/page-5.html
@@ -28,7 +28,11 @@
 
     <!-- header  -->
     <div id="headDiv" class="introHead"><h1></h1><h1>Storyboard</h1></div>
-    <h2 id="storyboardHead">How to navigate the website</h2>
+
+    <div id="myBody">
+        <h2 id="storyboardHead">How to navigate the website and its layout</h2>
+
+    </div>
 
         <!-- footer -->
         <div id="footer">
