--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <!-- nav bar code -->
         <nav id="myIndex">
             <div id ="myIn">
+                <img src="images/sadmanyes.png" id="logoImage">
                 <a href="index.html">Home</a>
                 <span>|</span>
                 <a href="page-5.html">Storyboard</a>
