--- a/page-1.html
+++ b/page-1.html
@@ -32,7 +32,8 @@
     <div id="headDiv" class="oneHead"><h1>The Analysts - xNTxs</h1></div>
     <div id= myBody>
 
-        <h2>The Analysts:</h2>
+        <img src="images/analysts side.jpg" id="sideImg">
+        <h2 id="headTwoTitle">The Analysts:</h2>
         
         <ul>
             <li>INTJ</li>
