--- a/page-2.html
+++ b/page-2.html
@@ -30,6 +30,16 @@
     <!-- header  -->
     <div id="headDiv" class="twoHead"><h1>The Idealists - xNFs</h1></div>
     <div id= "myBody">
+
+        <img src="images/diplomats side.jpg" id="sideImg">
+        <h2 id="headTwoTitle">The Idealists:</h2>
+        
+        <ul>
+            <li>INFJ</li>
+            <li>INFP</li>
+            <LI>ENFJ</LI>
+            <LI>ENFP</LI>
+        </ul>
         
         <h2>INFJ</h2>
         <h3>Ne > Ti > Fe > Si</h3>
