--- a/page-3.html
+++ b/page-3.html
@@ -31,6 +31,16 @@
     <!-- header  -->
     <div id=headDiv class="threeHead"><h1>The Guardians - xSxJs</h1></div>
     <div id= "myBody">
+
+        <img src="images/sentinels side.jpg" id="sideImg">
+        <h2 id="headTwoTitle">The Guardians:</h2>
+        
+        <ul>
+            <li>ISTJ</li>
+            <li>ISFJ</li>
+            <LI>ESTJ</LI>
+            <LI>ESFJ</LI>
+        </ul>
         
         <h2>ISTJ</h2>
         <h3>Si > Te > Fi > Ne</h3>
