--- a/page-4.html
+++ b/page-4.html
@@ -33,6 +33,16 @@
 
 
         <div id="myBody">
+
+            <img src="images/explorers side.jpg" id="sideImg">
+            <h2 id="headTwoTitle">The Explorers:</h2>
+        
+            <ul>
+                <li>ISTP</li>
+                <li>ISFP</li>
+                <LI>ESTP</LI>
+                <LI>ESFP</LI>
+            </ul>
             
             <h2>ISTP</h2>
             <h3>Ti > Se > Ni > Fe</h3>
