--- a/page-5.html
+++ b/page-5.html
@@ -32,6 +32,7 @@
 
     <div id="myBody">
         <h2 id="storyboardHead">How to navigate the website and its layout</h2>
+        <img src="images/Natalie Hale_Storyboard.png" id="storyboardImg">
 
     </div>
 
