--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div id="myBody">
             
 
-            <img src= "images/cognitive function wheel.png" id= "imgOne" > 
+            <img src= "images/cognitivefunction wheel.png" id= "imgOne" > 
             <p>MBTI stands for Myers Briggs Type Indicator. This is a tool which is frequently used to help individuals understand their
                 own communication preference and how they interact with others. Having an awareness of what MBTI is can help you
                 adapt your interpersonal approach to different situations and audiences.When most people hear "Myers-Briggs," they think of the personality test, and the four letters associated with their resulting personality type: 
